[gd_scene load_steps=8 format=3 uid="uid://c6gt5mg7fks2h"]

[ext_resource type="Script" path="res://ui/buttons/pause/pause_screen/pause_screen.gd" id="1_af0x0"]
[ext_resource type="Texture2D" uid="uid://c23717otlnld0" path="res://ui/buttons/pause/pause_screen/overlay/overlay_pause-clicked.png" id="2_ui35v"]
[ext_resource type="Texture2D" uid="uid://b11itjtl4s3tx" path="res://ui/buttons/pause/pause_screen/overlay/overlay_pause-unclicked.png" id="3_yanbr"]
[ext_resource type="Texture2D" uid="uid://bct0ru0wik1ej" path="res://ui/buttons/pause/pause_screen/continue_button/continue_clicked.png" id="4_x0osc"]
[ext_resource type="Texture2D" uid="uid://cj2nxoa1iwol8" path="res://ui/buttons/pause/pause_screen/continue_button/continue_unclicked.png" id="5_nj30o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ivg8f"]
bg_color = Color(0.223529, 0.223529, 0.223529, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_oxrmj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ui35v")
}],
"loop": true,
"name": &"clicked",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yanbr")
}],
"loop": true,
"name": &"unclicked",
"speed": 5.0
}]

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_af0x0")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Art" type="TextureRect" parent="Background"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Background"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ivg8f")

[node name="Icon" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprites" type="AnimatedSprite2D" parent="Icon"]
sprite_frames = SubResource("SpriteFrames_oxrmj")
animation = &"unclicked"
centered = false

[node name="Button" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 725.0
offset_top = 833.0
offset_right = 725.0
offset_bottom = 833.0

[node name="Continue" type="TextureButton" parent="Button"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
texture_normal = ExtResource("4_x0osc")
texture_pressed = ExtResource("5_nj30o")
texture_hover = ExtResource("4_x0osc")

[node name="Timer" type="Node" parent="."]

[node name="ClickedAnimation" type="Timer" parent="Timer"]
wait_time = 1.5
one_shot = true

[connection signal="pressed" from="Button/Continue" to="." method="_on_continue_pressed"]
[connection signal="timeout" from="Timer/ClickedAnimation" to="." method="_on_clicked_animation_timeout"]
